--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -22,7 +22,13 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "inheritEnvironments": [ "msvc_x64_x64" ],
-      "variables": []
+      "variables": [
+        {
+          "name": "PYTHON",
+          "value": "C:/Users/elisson.lima/AppData/Local/Programs/Python/Python37/python.exe",
+          "type": "FILEPATH"
+        }
+      ]
     }
   ]
 }
