--- a/HiveParser/CMakeLists.txt
+++ b/HiveParser/CMakeLists.txt
@@ -49,11 +49,13 @@ include_directories(${ANTLR4_RUNTIME_LIBRARIES})
 message("Lexer out dir ${ANTLR_HiveLexer_OUTPUT_DIR}")
 message("Parser out dir ${ANTLR_HiveParser_OUTPUT_DIR}")
 
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
 add_executable(hiveparser main.cpp hql_types.cpp hql_exprs.cpp hql_stmts.cpp hql_functions.cpp
 #               ${ANTLR_HiveLexer_CXX_OUTPUTS}
                ${ANTLR_HiveParser_CXX_OUTPUTS})
 
 target_link_libraries(hiveparser antlr4_static nlohmann_json::nlohmann_json)
+
 # target_link_libraries(hiveparser antlr4_shared)
 #add_custom_command(TARGET hiveparser
 #                   POST_BUILD
@@ -61,18 +63,17 @@ target_link_libraries(hiveparser antlr4_static nlohmann_json::nlohmann_json)
 #                           -E copy ${ANTLR4_RUNTIME_LIBRARIES} .
 #                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
-#set(SETUP_PY_IN "${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in")
-#set(SETUP_PY    "${CMAKE_CURRENT_BINARY_DIR}/HiveParser/setup.py")
-#    set(DEPS        "${CMAKE_CURRENT_SOURCE_DIR}/module/__init__.py")
-#set(OUTPUT      "${CMAKE_CURRENT_BINARY_DIR}/build_ext")
+set(SETUP_PY_IN "${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in")
+set(SETUP_PY    "${CMAKE_CURRENT_BINARY_DIR}/setup.py")
+set(OUTPUT      "${CMAKE_CURRENT_BINARY_DIR}/build_ext")
 
-#configure_file(${SETUP_PY_IN} ${SETUP_PY})
+configure_file(${SETUP_PY_IN} ${SETUP_PY})
 
-#add_custom_command(OUTPUT ${OUTPUT}
-#                    COMMAND ${PYTHON} ${SETUP_PY} build_ext
+add_custom_command(OUTPUT ${OUTPUT}
+                    COMMAND ${PYTHON} ${SETUP_PY} build_ext
 #                    COMMAND ${CMAKE_COMMAND} -E touch ${OUTPUT} 
-#                    DEPENDS ${DEPS})
+                   DEPENDS hiveparser)
 
-#add_custom_target(target ALL DEPENDS ${OUTPUT})
+add_custom_target(target ALL DEPENDS ${OUTPUT})
 
-#install(CODE "execute_process(COMMAND ${PYTHON} ${SETUP_PY} install)")
+install(CODE "execute_process(COMMAND ${PYTHON} ${SETUP_PY} install)")
