--- a/HiveParser/setup.py.in
+++ b/HiveParser/setup.py.in
@@ -13,8 +13,9 @@ setup(name='hiveparser',
             '${CMAKE_CURRENT_SOURCE_DIR}/hql_functions.cpp',
             '${ANTLR_HiveParser_OUTPUT_DIR}/HiveParser.cpp','${ANTLR_HiveParser_OUTPUT_DIR}/HiveLexer.cpp'],
         include_dirs = ['${CMAKE_CURRENT_SOURCE_DIR}', '${ANTLR4_INCLUDE_DIRS}', '${ANTLR_HiveParser_OUTPUT_DIR}', '${NLOHMANN_JSON_INCLUDE_BUILD_DIR}'],
-        extra_compile_args=['-DANTLR4CPP_STATIC'],
-        library_dirs = ['${ANTLR4_LIB_DIR}', '${ANTLR4_INCLUDE_DIRS}', '${ANTLR_HiveParser_OUTPUT_DIR}', '${NLOHMANN_JSON_INCLUDE_BUILD_DIR}'],
+        extra_compile_args=['/MD','-DANTLR4CPP_STATIC','-I${ANTLR4_LIB_DIR}/antlr4-runtime-static.lib'],
+        library_dirs = ['${ANTLR4_LIB_DIR}', 
+        '${ANTLR4_INCLUDE_DIRS}', '${ANTLR_HiveParser_OUTPUT_DIR}', '${NLOHMANN_JSON_INCLUDE_BUILD_DIR}'],
         libraries = ['antlr4-runtime-static']
         )
     ]
