--- a/HiveParser/setup.py.in
+++ b/HiveParser/setup.py.in
@@ -1,10 +1,10 @@
 from distutils.core import setup, Extension
 
 
-setup(name='hiveparser',
+setup(name='hiveparser_c',
     version='1.0',
     ext_modules=[
-    Extension('hiveparser', 
+    Extension('hiveparser_c', 
         ['${CMAKE_CURRENT_SOURCE_DIR}/module.cpp', 
             '${CMAKE_CURRENT_SOURCE_DIR}/HiveParserModule.cpp',
             '${CMAKE_CURRENT_SOURCE_DIR}/hql_types.cpp',
@@ -14,8 +14,7 @@ setup(name='hiveparser',
             '${ANTLR_HiveParser_OUTPUT_DIR}/HiveParser.cpp','${ANTLR_HiveParser_OUTPUT_DIR}/HiveLexer.cpp'],
         include_dirs = ['${CMAKE_CURRENT_SOURCE_DIR}', '${ANTLR4_INCLUDE_DIRS}', '${ANTLR_HiveParser_OUTPUT_DIR}', '${NLOHMANN_JSON_INCLUDE_BUILD_DIR}'],
         extra_compile_args=['/MD','-DANTLR4CPP_STATIC','-I${ANTLR4_LIB_DIR}/antlr4-runtime-static.lib'],
-        library_dirs = ['${ANTLR4_LIB_DIR}', 
-        '${ANTLR4_INCLUDE_DIRS}', '${ANTLR_HiveParser_OUTPUT_DIR}', '${NLOHMANN_JSON_INCLUDE_BUILD_DIR}'],
+        library_dirs = ['${ANTLR4_LIB_DIR}', '${ANTLR4_INCLUDE_DIRS}', '${ANTLR_HiveParser_OUTPUT_DIR}', '${NLOHMANN_JSON_INCLUDE_BUILD_DIR}'],
         libraries = ['antlr4-runtime-static']
         )
     ]
