--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -9,7 +9,7 @@
       "cmakeCommandArgs": "",
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [ "msvc_x64_x64" ],
+      "inheritEnvironments": [ "msvc_x64" ],
       "variables": [
         {
           "name": "PYTHON",
