--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "python.pythonPath": "C:\\Users\\elisson.lima\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
