--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "cmake.configureOnOpen": false,
-    "python.pythonPath": "C:\\Users\\elisson.lima\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\elisson.lima\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
