--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -19,6 +19,18 @@
       ]
     },
     {
+      "name": "x64-Release-2",
+      "generator": "Ninja",
+      "configurationType": "RelWithDebInfo",
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "inheritEnvironments": [ "msvc_x64" ],
+      "variables": []
+    },
+    {
       "name": "x86-Release",
       "generator": "Ninja",
       "configurationType": "RelWithDebInfo",
@@ -28,7 +40,13 @@
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
       "inheritEnvironments": [ "msvc_x86" ],
-      "variables": []
+      "variables": [
+        {
+          "name": "PYTHON",
+          "value": "C:/Users/elisson.lima/AppData/Local/Programs/Python/Python37-32/python.exe",
+          "type": "FILEPATH"
+        }
+      ]
     }
   ]
 }
